tests/negative/test_block_terminals.orb
fnc main() () {
    block {
        if false { }
    };
};